<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GetDataActivity!</string>
    <string name="app_name">GetData</string>
    <string name="title_activity_quest">QuestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_file_hint">log file</string>
    <string name="set_btn">Set</string>
    <string name="compute_quaternion">Compute Quaternion</string>
    <string name="status_stop">Status: Stop</string>
    <string name="clear">Clear</string>
    <string name="record">Record</string>
    <string name="title_activity_simple_fusion">SimpleFusionActivity</string>

</resources>