<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="experia.GetData.activity.QuestActivity">

    <RelativeLayout
        android:id="@+id/log_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/log_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/log_file_hint"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/log_name_set_btn" />

        <Button
            android:id="@+id/log_name_set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/set_btn" />
    </RelativeLayout>

    <Button
        android:id="@+id/data_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_name"
        android:text="@string/record" />

    <Button
        android:id="@+id/calculate_quaternion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/data_record_button"
        android:layout_below="@id/log_name"
        android:text="@string/compute_quaternion" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/calculate_quaternion_button"
        android:layout_below="@id/log_name"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_stop"
        android:layout_below="@+id/data_record_button" />

    <Button
        android:id="@+id/kalman_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:text="Kalman Filter" />

    <TextView
        android:id="@+id/kalman_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_stop"
        android:layout_below="@+id/kalman_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/kalman_button">

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </ScrollView>

</RelativeLayout>
